--- a/BaseTX/angular.json
+++ b/BaseTX/angular.json
@@ -24,8 +24,7 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.css",
-              "node_modules/font-awesome/css/font-awesome.css",
+              
               "src/styles.css"
             ],
             "scripts": []
@@ -86,8 +85,7 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.css",
-              "node_modules/font-awesome/css/font-awesome.css",
+              "./node_modules/ngx-ui-switch/ui-switch.component.css",
               "src/styles.css"
             ],
             "scripts": []
