--- a/BaseTX/package.json
+++ b/BaseTX/package.json
@@ -15,12 +15,20 @@
     "@angular/common": "~8.1.0",
     "@angular/compiler": "~8.1.0",
     "@angular/core": "~8.1.0",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.1.0",
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
+    "@ng-select/ng-select": "^3.0.3",
+    "angular-ng-autocomplete": "^1.1.13",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
+    "ng-pick-datetime-moment": "^1.0.8",
+    "ngx-pagination": "^4.1.0",
+    "ngx-pipes": "^2.5.6",
+    "ngx-ui-loader": "^8.0.0",
     "ngx-ui-switch": "^8.1.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
